# PoliConnectApi

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/core/: api_error.rs  mod.rs
src/healthcheck/controller/: mod.rs
src/healthcheck/routes/: mod.rs
src/promedios/: mod.rs
src/promedios/controller/: mod.rs
src/promedios/domain/: mod.rs
src/promedios/domain/repository/: mod.rs
src/promedios/domain/use_case/: calculate_grades_use_case.rs  calculate_missing_use_case.rs  mod.rs
src/promedios/presentation/: mod.rs
src/promedios/routes/: mod.rs
web/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js
web/src/: App.svelte  app.html  app.postcss
web/src/lib/types/: EndpointParam.ts  EndpointResponse.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/docs/: +page.svelte  Endpoint.svelte  EndpointParam.svelte  EndpointParams.svelte  EndpointResponse.svelte
web/src/routes/docs/promedios/: +page.svelte
