[package]
name = "PoliConnectApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
axum = { version = "0.7.5", features = ["tracing"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.12.1"
dotenvy = "0.15.7"
